--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^4.5.3",
-    "gh-pages": "^3.1.0",
+    "bootstrap": "^4.6.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.14.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "react-particles-js": "^3.5.3",
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,8 +31,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.3%",
       "not dead",
+      "not ie 11",
       "not op_mini all"
     ],
     "development": [
